fix(demo): overflow in firefox

--- a/demo/style.css
+++ b/demo/style.css
@@ -102,7 +102,7 @@ label {
   width: 100%;
   height: 100%;
   position: absolute;
-  overflow: hidden;
+  overflow: auto;
 }
 .body {
   display: flex;
